--- a/app/globals.scss
+++ b/app/globals.scss
@@ -40,6 +40,7 @@
   margin: 0 0 13.6px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
+  font-size: 5rem;
 }
 .quantityButtons {
   padding: 2px;
