--- a/app/products/[productsId]/page.module.scss
+++ b/app/products/[productsId]/page.module.scss
@@ -4,5 +4,9 @@
   font-family: 'Lato', sans-serif;
 }
 .price-product-page-price {
-  font-size: 24px;
+  font-size: 3rem;
+  font-weight: 700 bold;
+}
+.test {
+  background-color: red;
 }
